<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/categoryListFragment"
        android:title="@string/nav_categories"
        android:icon="@drawable/ic_category" />

    <item
        android:id="@+id/taskListFragment"
        android:title="@string/nav_tasks"
        android:icon="@drawable/ic_task" />

    <item
        android:id="@+id/calendarFragment"
        android:title="@string/nav_calendar"
        android:icon="@drawable/ic_calendar" />

    <item
        android:id="@+id/levelProgressFragment"
        android:title="@string/nav_level_progress"
        android:icon="@drawable/ic_progress" />

    <item
        android:id="@+id/specialMission"
        android:title="Special Mission"
        android:icon="@drawable/ic_mission" />
    <item
        android:id="@+id/statisticsFragment"
        android:title="Statistics"
        android:icon="@drawable/ic_statistics" />
</menu>
