<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />


    <item
        android:id="@id/nav_store"
        android:icon="@drawable/ic_store"
        android:title="@string/store"/>

    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_calendar"
        android:title="Calendar" />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_my_account"
        android:title="@string/profile" />

</menu>


