<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".presentation.fragments.AllianceCreateFragment">

    <EditText
        android:id="@+id/etAllianceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/allianceName"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tvFriendsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectFriends"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFriendsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        tools:listitem="@layout/item_friend_selectable"/>

    <Button
        android:id="@+id/btnCreateAlliance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textAllCaps="false"
        android:layout_marginTop="12dp" />
</LinearLayout>
