<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".presentation.activities.WelcomeActivity">

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="200dp"/>

    <TextView
        android:id="@+id/welcomeSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_subtitle"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/welcomeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"
        android:textColor="@color/darkGreen"
        app:backgroundTint="@color/white"
        android:textAllCaps="true"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/welcomeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textAllCaps="true"
        app:backgroundTint="@android:color/transparent"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
