<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvLockedMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shopUnlock"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:padding="16dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvPotions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/potions"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPotions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false" />

        <TextView
            android:id="@+id/tvClothing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clothing"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvClothing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
